css/custom.css
a { color: #4B58A6; }
a:hover { color: #4B58A6; }

#map_canvas img {
  max-width: none;
}


#results_list {
  overflow-y:auto;
  height: 100%;
  
}

#legend {
  background: white;
  padding: 15px;
  position: absolute;
/*  bottom:15%;*/
  left:10;
  }


.filter-box { 
  height: 15px; 
  width: 15px;  
  display: inline-block;
  *border-right-width: 2px;
  *border-bottom-width: 2px;
  -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
          border-radius: 5px;
  -webkit-background-clip: padding-box;
     -moz-background-clip: padding;
          background-clip: padding-box; 
}

.filter-yellow { background-color: #FBF358; }
.filter-green { background-color: #00E13C; }
.filter-blue { background-color: #5781FC; }
.filter-purple { background-color: #7C54FB; }
.filter-red { background-color: #FB6353; }


canvas {-ms-touch-action: double-tap-zoom;}

